refactor: style de letra do footer trocada

--- a/app/components/ui/footer/Footer.module.scss
+++ b/app/components/ui/footer/Footer.module.scss
@@ -63,11 +63,11 @@
 
 .footerDisney,
 .footerDireitosReservados {
+  font: $typography-body-review;
   margin-top: 1.5rem;
   padding: 0.9rem;
   color: #fff;
   text-align: center;
-  font-family: "MontSerrat";
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
